--- a/index.html
+++ b/index.html
@@ -5,58 +5,66 @@
 		<title>Geometry37's Homepage</title>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
-		
+
 		<!-- MDUI -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/css/mdui.min.css" integrity="sha384-cLRrMq39HOZdvE0j6yBojO4+1PrHfB7a9l5qLcmRm/fiWXYY+CndJPmyu5FV/9Tw"
 		 crossorigin="anonymous" />
 		<script src="https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/js/mdui.min.js" integrity="sha384-gCMZcshYKOGRX9r6wbDrvF+TcCCswSHFucUzUPwka+Gr+uHgjlYvkABr95TCOz3A"
 		 crossorigin="anonymous"></script>
-		 <!--------->
-		 
-		 <!-- syzoj -->
+		<!--------->
+
+		<!-- Semantic UI -->
 		<link href="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/cdnjs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
-		<script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
-		<link href="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/self/tomorrow.css" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/self/math.css" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/cdnjs/morris.js/0.5.1/morris.css" rel="stylesheet">
-		<script src="https://cdn.jsdelivr.net/npm/minivaline@4/dist/MiniValine.min.js"></script>
-		<link href="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/google-fonts/fira-mono.css" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/google-fonts/lato.css" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/google-fonts/open-sans.css" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/google-fonts/exo-2.css" rel="stylesheet">
-		<script data-cfasync="false" src="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/cdnjs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
 		<script data-cfasync="false" src="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/cdnjs/semantic-ui/2.4.1/semantic.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/cdnjs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/syzoj-public-cdn@1.0.6/self/script.js?20170710"></script>
-		<link href="https://cdn.staticfile.org/emoji/0.2.2/emoji.css" rel="stylesheet" type="text/css" />
-		<script src="https://cdn.staticfile.org/emoji/0.2.2/emoji.js"></script>
 		<!----------->
 		
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
 	</head>
 	<body>
 		<div class="container" align="center">
-			<img class="avatar" src="https://i.loli.net/2020/12/31/vJodPb59tepSirh.jpg" width="160" height="160"/>
+			<img class="avatar" src="https://i.loli.net/2020/12/31/vJodPb59tepSirh.jpg" width="160" height="160" />
 			<br>
 			<span style="font-family: 'Ma Shan Zheng'; font-size: 2.5em; font-weight: 400; ">Geometry37</span>
-			<br><br>
+			
+			<br>
+			<div class="mdui-divider"></div>
+			<br>
+			
 			<div class="mdui-container">
 				<div class="mdui-row-xs-3">
 					<div class="mdui-col">
-						<a class="mdui-color-blue-grey-600 mdui-btn mdui-btn-block mdui-ripple mdui-hoverable" title="Twitter" href="https://twitter.com/Trotyl47294464">
-							<i class="twitter icon"></i>
+						<a class="mdui-color-blue-grey-600 mdui-btn mdui-btn-icon mdui-btn-dense mdui-color-theme-accent mdui-ripple" title="Twitter" href="https://twitter.com/Trotyl47294464" target="_blank">
+							&nbsp;<i class="twitter icon"></i>
 						</a>
 					</div>
 					<div class="mdui-col">
-						<a class="mdui-color-pink-a200 mdui-btn mdui-btn-block mdui-ripple mdui-hoverable" title="Github" href="https://github.com/TNTtian">
-							<i class="github icon"></i>
+						<a class="mdui-color-pink-a200 mdui-btn mdui-btn-icon mdui-btn-dense mdui-color-theme-accent mdui-ripple" title="Github" href="https://github.com/TNTtian" target="_blank">
+							&nbsp;<i class="github icon"></i>
 						</a>
 					</div>
 					<div class="mdui-col">
-						<a class="mdui-color-light-blue-300 mdui-btn mdui-btn-block mdui-ripple mdui-hoverable" title="E-Mail" href="mailto:Trotyl-tnt@yandex.com">
-							<i class="mail icon"></i>
+						<a class="mdui-color-light-blue-300 mdui-btn mdui-btn-icon mdui-btn-dense mdui-color-theme-accent mdui-ripple" title="E-Mail" href="mailto:Trotyl-tnt@yandex.com" target="_blank">
+							&nbsp;<i class="mail icon"></i>
+						</a>
+					</div>
+				</div>
+				
+				<br>
+
+				<div class="mdui-row-xs-3">
+					<div class="mdui-col">
+						<a class="mdui-btn mdui-ripple" title="Blog" href="https://blog.geometry37.tk/" target="_blank">
+							Blog
+						</a>
+					</div>
+					<div class="mdui-col">
+						<a class="mdui-btn mdui-ripple" title="Wiki" href="https://wiki.geometry37.tk/" target="_blank">
+							Wiki
+						</a>
+					</div>
+					<div class="mdui-col">
+						<a class="mdui-btn mdui-ripple" title="Friend" href="https://friends.geometry37.tk/" target="_blank">
+							Friends
 						</a>
 					</div>
 				</div>
