--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
 	</head>
 	<body>
-		<div class="container" align="center">
+		<div class="container" align="center" id="main">
 			<img class="avatar" src="https://i.loli.net/2020/12/31/vJodPb59tepSirh.jpg" width="160" height="160" />
 			<br>
 			<span style="font-family: 'Ma Shan Zheng'; font-size: 2.5em; font-weight: 400; ">Geometry37</span>
@@ -71,4 +71,12 @@
 			</div>
 		</div>
 	</body>
+	<div class="ui vertical footer segment" style="margin-top: 15px; " id="footer">
+		<div class="ui center aligned container">
+			<span style="color: #999;">
+				&copy; 2018-2021 Geometry37.<br>
+				<a href="https://icp.gov.moe" target="_blank">萌ICP备 </a><a href="https://icp.gov.moe/?keyword=20211126" target="_blank"> 20211126号</a>
+			</span>
+	 	</div>
+	</div>
 </html>
